fix screen size overflow

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     font-size: var(--font-medium);
     color: var(--blue);
     background-color: #232323;
+    overflow-x: hidden;
 }
   
 .page-wrap {
